@@ -3,4 +3,13 @@
   :url "http://example.com/FIXME"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.8.0"]])
+  :dependencies [[org.clojure/clojure "1.9.0"]
+                 [org.clojure/data.json "0.2.6"]
+                 [compojure "1.6.1"]
+                 [http-kit "2.2.0"]
+                 [ring "1.6.3"]
+                 [ring/ring-defaults "0.3.2"]
+                 [ring-cors "0.1.12"]
+                 [ring/ring-json "0.4.0"]
+                 [metosin/ring-http-response "0.9.0"]]
+  :jvm-opts ["--add-modules" "java.xml.bind"])
